# PublicHAgent

./: .dockerignore  .gitignore  PH_upgrade.txt  PLAN.md  README.md  pyproject.toml  requirements.txt  run.py
backend/: __init__.py
backend/agents/: __init__.py
backend/api/: __init__.py  deps.py  main.py  protocol.py  websocket.py
backend/config/: .env.example  mcp.json  models.json  settings.json
backend/core/: __init__.py  checkpoint_store.py  session_workspace.py  state.py  workflow.py
backend/evaluation/: __init__.py  aggregator.py  artifact_collector.py  orchestrator.py  schemas.py  task_registry.py
backend/learning/: __init__.py  skill_learning.py  trajectory.py
backend/models/: user_config.py
backend/sandbox/: Dockerfile  __init__.py  (+3 more)
docs/: developer-guide.md  performance-optimization.md  result-validation.md  runtime-upgrade-2026-04.md  security-audit.md  self-learning-skill-implementation-plan.md  user-guide.md  verifier-evaluator-upgrade-plan.md  个人学习-自学习Skill与安全代码执行.md  多平台访问方案.md  微信小程序迁移可行性分析.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
tests/: test_api.py  test_builtin_tools.py  test_evaluation.py  test_executor.py  test_intent.py  test_llm_client.py  test_mcp.py  test_memory.py  test_planner.py  test_planner_memory_integration.py  test_planner_skill_disclosure.py  test_reflection.py  test_sandbox.py  test_sandbox_security.py  test_security.py  test_self_learning_workflow.py  test_skills.py  test_tools.py  test_websocket_completion.py  test_workflow.py
(+99 files in other folders)
